[package]
name = "hyper_test"
version = "0.1.0"
authors = ["Ali Rashidi <alirashidi127@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
clap = "2.33.0"
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }